--- a/bod.html
+++ b/bod.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid bod-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                     ABOUT US
                 </h6>
@@ -106,7 +106,7 @@
     </div> 
     <div class="container-fluid bod-mid">
       <div class="row first-section">
-        <div class="col-lg-3 text-center offset-lg-3">
+        <div class="col-lg-3 text-center offset-lg-3 d-none d-lg-block">
           <div class="portraits-wrapper">
             <img class="portraits mb-lg-2" src="images/bod-image-portraits-03.jpg" alt="">
             <h6 class="text-orange text-center mt-lg-5">
@@ -117,7 +117,7 @@
             </h4>
           </div>
         </div>
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-3 text-center d-none d-lg-block">
           <div class="portraits-wrapper">
             <img class="portraits mb-lg-2" src="images/bod-image-portraits-04.jpg" alt="">
             <h6 class="text-orange text-center mt-lg-5">
@@ -128,18 +128,53 @@
             </h4>
           </div>
         </div>
+        <div class="col-lg-12 d-lg-none pr-0">
+          <div class="carousel-bod owl-theme">
+            <div class="item">
+              <h4 class="text-white text-center mb-4">
+                Syadil<br>
+                Awad Umur
+              </h4>
+              <img class="portraits mb-lg-2" src="images/bod-image-portraits-03.jpg" alt="">
+              <div class="d-flex">
+                <h6 class="text-orange my-4">
+                  PRESIDEN DIREKTUR
+                </h6>
+                <h6 class="my-4 text-right number">
+                  1/2
+                </h6>
+              </div>
+            </div>
+            <div class="item">
+              <h4 class="text-white text-center mb-4">
+                Taufik<br>
+                Nadji Alkatiri
+              </h4>
+              <img class="portraits mb-lg-2" src="images/bod-image-portraits-04.jpg" alt="">
+              <div class="d-flex">
+                <h6 class="text-orange my-4">
+                  DIREKTUR
+                </h6>
+                <h6 class="my-4 text-right number">
+                  2/2
+                </h6>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row second-section">
         <div class="col-lg-12">
-        
+          
         </div>
       </div>
     </div>
     <div class="container-fluid bod-bottom-content">
       <div class="row">
-        <div class="col-lg-12 px-lg-0">
+        <div class="col-lg-12 px-0">
           <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
-          <img class="w-100" src="images/bod-bottom-04.jpg" alt="">
+          <img class="w-100 d-none d-lg-block" src="images/bod-bottom-04.jpg" alt="">
+          <img class="w-100 d-lg-none" src="images/bod-bottom-mobile-03.jpg" alt="">
           <div class="details-wrapper">
             <h2 class="text-orange font-50">
               “
@@ -156,8 +191,13 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Cari Tahu Tentang Kami Lebih Lagi
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Cari Tahu<br>
+                Tentang Kami<br>
+                Lebih Lagi
               </h4>
           </div>
       </div>
@@ -180,27 +220,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -212,16 +252,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
