--- a/business-mining.html
+++ b/business-mining.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,20 +86,20 @@
 </div>
     <div class="container-fluid busd-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                   OUR BUSINESSES
                 </h6>
                 <h2 class="text-dark-blue mb-lg-4">
                   Ansaf Mining
                 </h2>
-                <a href="businesses.html" class="mt-lg-5 d-inline-block">
+                <a href="businesses.html" class="mt-lg-5 d-none d-lg-inline-block">
                   <i class="fas fa-chevron-left text-orange"></i> kembali ke halaman sebelumnya
                 </a>
             </div>
@@ -110,24 +110,47 @@
     <div class="container-fluid busd-mid position-relative">
       <img class="guy-content move-right" src="images/businesses-mining-guy-content-02.png" alt="">
       <div class="row first-section">
-        <div class="col-lg-6 offset-lg-6">
-          <h6 class="text-orange mb-lg-1">
-            TENTANG BISNIS INI
-          </h6>
-          <h3 class="text-white mb-lg-4">
-            Usaha Jasa Penambangan
-          </h3>
-          <p class="text-white">
-            Seiring dengan pengalaman dalam bidang Usaha Jasa<br>
-            Penambangan batubara maka PT. Ansaf Inti Resources mulai<br>
-            melakukan pengembangan usaha untuk mengelola IUP di Embalut<br>
-            dan Batuah dan melakukan diversifikasi usaha ke bidang lain yaitu<br>
-            dibidang Nikel dan penambangan batu andesit.<br>
-            <br>  
-            Konsep ini diambil untuk menyelaraskan kebutuhan nikel dimasa<br>
-            yang akan datang dan sebagai kontribusi terhadap pembangunan<br>
-            yang berkesinambungan dibidang infrastruktur saat ini.
-          </p>
+        <div class="col-lg-6 offset-lg-6 pl-lg-3 pl-0">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block d-lg-none">
+              <img class="mt-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-0 pl-2">
+              <h6 class="text-orange mb-lg-1">
+                TENTANG BISNIS INI
+              </h6>
+              <h3 class="text-white mb-lg-4">
+                Usaha Jasa Penambangan
+              </h3>
+              <p class="text-white d-none d-lg-block">
+                Seiring dengan pengalaman dalam bidang Usaha Jasa<br>
+                Penambangan batubara maka PT. Ansaf Inti Resources mulai<br>
+                melakukan pengembangan usaha untuk mengelola IUP di Embalut<br>
+                dan Batuah dan melakukan diversifikasi usaha ke bidang lain yaitu<br>
+                dibidang Nikel dan penambangan batu andesit.<br>
+                <br>  
+                Konsep ini diambil untuk menyelaraskan kebutuhan nikel dimasa<br>
+                yang akan datang dan sebagai kontribusi terhadap pembangunan<br>
+                yang berkesinambungan dibidang infrastruktur saat ini.
+              </p>
+              <p class="text-white">
+                Seiring dengan pengalaman dalam bidang<br>
+                Usaha Jasa Penambangan batubara maka PT.<br>
+                Ansaf Inti Resources mulai melakukan<br>
+                pengembangan usaha untuk mengelola IUP di<br>
+                Embalut dan Batuah dan melakukan<br>
+                diversifikasi usaha ke bidang lain yaitu dibidang<br>
+                Nikel dan penambangan batu andesit.<br>
+                <br>  
+                Konsep ini diambil untuk menyelaraskan<br>
+                kebutuhan nikel dimasa yang akan datang dan<br>
+                sebagai kontribusi terhadap pembangunan<br>
+                yang berkesinambungan dibidang infrastruktur<br>
+                saat ini.
+              </p>
+            </div>
+            
+          </div>
         </div>
       </div>
     </div>
