--- a/vision-mission.html
+++ b/vision-mission.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid vision-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                     ABOUT US
                 </h6>
@@ -107,7 +107,8 @@
     <div class="container-fluid vision-mid bg-dark-blue">
       <img class="two-guy move-left" src="images/vision-two-guy-02.png" alt="">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-lg-0 px-0">
+          <img class="img-fluid d-lg-none" src="images/mid-content-images-mobile-05.jpg" alt="" >
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-4">
                 <h3 class="text-white mb-lg-4">
@@ -120,7 +121,7 @@
                 </p>
             </div>
           </div>
-          <img class="content-mid" src="images/mid-content-images-05.png" alt="">
+          <img class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
       <div class="row mt-lg-5 second-section">
@@ -130,7 +131,7 @@
           </h3>
         </div>
       </div>
-      <div class="row">
+      <div class="row d-none d-lg-flex">
         <div class="container">
           <div class="row my-lg-5">
             <div class="col-lg-4 text-center">
@@ -172,7 +173,7 @@
           </div>
         </div>
       </div>
-      <div class="row my-lg-5">
+      <div class="row my-lg-5 d-none d-lg-flex">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 offset-lg-2 text-center">
@@ -201,12 +202,106 @@
           </div>
         </div>
       </div>
+      <div class="row d-lg-none">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 px-4">
+              <div class="carousel-mission-mobile owl-theme">
+                <div class="item">
+                    <div class="row">
+                      <div class="col-lg-12 text-center">
+                        <img class="img-icon my-5" src="images/mission-icon-content-02.png" alt="">
+                        <h6 class="text-orange my-3">
+                          INTEGRITY
+                        </h6>
+                        <p class="text-white font-roboto">
+                          Menumbuhkan integritas di kalangan para<br>
+                          pemangku kepentingan guna memperoleh<br>
+                          kepercayaan mitra kerja. 
+                        </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="item">
+                  <div class="row">
+                    <div class="col-lg-12 text-center">
+                      <img class="img-icon my-5" src="images/mission-icon-content-03.png" alt="">
+                      <h6 class="text-orange my-3">
+                        CONTINUOUS DEVELOPMENT
+                      </h6>
+                      <p class="text-white font-roboto">
+                        Mendorong peningkatan kompetensi<br>
+                        karyawan dan perbaikan berkesinambungan<br>
+                        guna membangun sumber daya manusia<br>
+                        yang tangguh. 
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="row">
+                    <div class="col-lg-12 text-center">
+                      <img class="img-icon my-5" src="images/mission-icon-content-04.png" alt="">
+                      <h6 class="text-orange my-3">
+                        OPTIMUM PRODUCTION
+                      </h6>
+                      <p class="text-white font-roboto">
+                        Memperkuat sistem operasional berlandaskan<br>
+                        sistem manajemen keselamatan pertambangan<br>
+                        agar terwujud pengelolaan yang efektif dan<br>
+                        memanfaatkan sumber daya perusahaan<br>
+                        untuk mencapai produksi optimal. 
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="row">
+                    <div class="col-lg-12 text-center">
+                      <img class="img-icon my-5" src="images/mission-icon-content-05.png" alt="">
+                      <h6 class="text-orange my-3">
+                        TEAMWORK
+                      </h6>
+                      <p class="text-white font-roboto">
+                        Menghargai loyalitas, kebersamaan dan kerja<br>
+                        keras secara adil untuk membangun kerja<br>
+                        sama yang kokoh. 
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="row">
+                    <div class="col-lg-12 text-center">
+                      <img class="img-icon my-5" src="images/mission-icon-content-06.png" alt="">
+                      <h6 class="text-orange my-3">
+                        EXCELLENCE
+                      </h6>
+                      <p class="text-white font-roboto">
+                        Mengoptimalkan potensi dan pengalaman<br>
+                        perusahaan yang menghadirkan solusi<br>
+                        bagi mitra kerja, masyarakat dan<br>
+                        lingkungan hidup.  
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Cari Tahu Tentang Kami Lebih Lagi
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Cari Tahu<br>
+                Tentang Kami<br>
+                Lebih Lagi
               </h4>
           </div>
       </div>
@@ -229,12 +324,12 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
@@ -245,11 +340,11 @@
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -261,16 +356,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
