--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
                   </a>
                 </div>
-                <div class="col-lg-8 menu-wrap ml-lg-5">
+                <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
                   <ul>
                     <li>
                       <a href="about.html">
@@ -72,7 +72,7 @@
                     </li> 
                   </ul>
                 </div>
-                <div class="col-lg-1 lang-ansaf">
+                <div class="col-lg-1 lang-ansaf d-none d-lg-block">
                   <div class="divider"></div>
                   <ul>
                     <li>
@@ -86,22 +86,24 @@
     </div>
     <div class="container-fluid about-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                <img class="mt-lg-5" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h6 class="text-orange">
                     ABOUT US
                 </h6>
                 <h2 class="text-dark-blue">
                   Company Profile
                 </h2>
-                <p class="text-dark-blue font-titillium-italic">
-                  ...tumbuh secara bertahap, dengan keyakinan - dan integritas, produktivitas<br>
-                  yang terbukti, komitmen, serta loyalitas. Kami adalah ANSAF!
+                <p class="text-dark-blue font-roboto">
+                  Tanggung Jawab Sosial Perusahaan bukan<br>
+                  hanya sekedar kewajiban. Bagi kami, tanggung<br>
+                  jawab sosial melekat dengan operasi kami<br>
+                  di manapun.
                 </p>
             </div>
           </div>
@@ -110,9 +112,10 @@
     </div> 
     <div class="container-fluid about-mid bg-dark-blue position-relative overflow-hidden">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-lg-0 px-0">
+          <img class="img-fluid d-lg-none" src="images/mid-content-images-mobile-05.jpg" alt="" >
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
+            <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
@@ -126,7 +129,7 @@
                 </p>
             </div>
           </div>
-          <img class="content-mid" src="images/mid-content-images-05.png" alt="">
+          <img class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
       <div class="row second-section">
@@ -171,14 +174,15 @@
           </div>
           </div>
         </div>
+        <img class="move-right guy d-none d-lg-block" src="images/about-content-guy-05.png" alt="">
+        <img class="ornament-mobile move-right d-lg-none" src="images/ornaments-about-milestone-mobile-04.png" alt="">
       </div>
-      <img class="guy move-right" src="images/about-content-guy-05.png" alt="">
     </div>
     <div class="container-fluid about-bottom-content">
       <div class="row">
-        <div class="col-lg-5 offset-lg-6 text-right">
+        <div class="col-lg-5 offset-lg-6">
           <h5 class="text-orange">
-            NILAI-NILAI KAMI
+            Nilai-Nilai Kami
           </h5>
           <p class="text-white font-titillium-italic">
             Melangkah setahap demi setahap, dengan keyakinan<br>
@@ -191,8 +195,13 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Cari Tahu Tentang Kami Lebih Lagi
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Cari Tahu<br>
+                Tentang Kami<br>
+                Lebih Lagi
               </h4>
           </div>
       </div>
@@ -215,12 +224,12 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
@@ -231,11 +240,11 @@
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -247,16 +256,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
