--- a/businesses.html
+++ b/businesses.html
@@ -21,7 +21,7 @@
             <img class="img-fluid logo" src="images/ansaf-logo.png" alt="">
           </a>
         </div>
-        <div class="col-lg-8 menu-wrap ml-lg-5">
+        <div class="col-lg-8 menu-wrap ml-lg-5 d-none d-lg-block">
           <ul>
             <li>
               <a href="about.html">
@@ -72,7 +72,7 @@
             </li> 
           </ul>
         </div>
-        <div class="col-lg-1 lang-ansaf">
+        <div class="col-lg-1 lang-ansaf d-none d-lg-block">
           <div class="divider"></div>
           <ul>
             <li>
@@ -86,13 +86,13 @@
 </div>
     <div class="container-fluid bus-top">
       <div class="row">
-        <div class="col-lg-12 pl-lg-0">
+        <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3" src="images/line-gray-11.png" alt="">
             </div>
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
                   Our Businesses
                 </h2>
@@ -103,8 +103,8 @@
     </div> 
     <div class="container-fluid bus-mid">
       <div class="row first-section">
-        <div class="col-lg-12 text-center">
-          <h3 class="text-white my-lg-4">
+        <div class="col-lg-12">
+          <h3 class="text-white my-4">
             PT Ansaf Inti Resources
           </h3>
           <p class="text-white">
@@ -118,16 +118,16 @@
         </div>
       </div>
       <div class="row thumbnail-bus bg-light-gray">
-        <div class="col-lg-6 item">
+        <div class="col-lg-6 item order-lg-1 order-2">
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
+            <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
+                <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Mining
                 </h2>
-                <p class="text-gray font-roboto">
+                <p class="text-gray font-roboto mb-lg-3 mb-5">
                   Seiring dengan pengalaman dalam bidang Usaha<br>
                   Jasa Penambangan batubara maka PT. Ansaf Inti<br>
                   Resources mulai melakukan pengembangan usaha<br>
@@ -140,22 +140,22 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 p-0">
+        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-2 order-1">
           <img class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
         </div>
-        <div class="col-lg-6 p-0">
+        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-3 order-3">
           <img class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
         </div>
-        <div class="col-lg-6 item">
+        <div class="col-lg-6 item  order-lg-4 order-4">
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
+            <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
+                <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Services
                 </h2>
-                <p class="text-gray font-roboto">
+                <p class="text-gray font-roboto mb-lg-3 mb-5">
                   Semenjak berdirinya di tahun 2014 sebagai perusahaan<br>
                   penyedia jasa pertambangan, Ansaf telah melayani<br>
                   serangkaian layanan kontrak pertambangan diberbagai<br>
@@ -168,16 +168,16 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 item">
+        <div class="col-lg-6 item  order-lg-5 order-6">
           <div class="content-wrapper d-flex">
-            <div class="inline-block">
+            <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4">
+                <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Logistic
                 </h2>
-                <p class="text-gray font-roboto">
+                <p class="text-gray font-roboto  mb-lg-3 mb-5">
                   Sejak tahun 2018, PT Ansaf Inti Resources berupaya<br>
                   melakukan diversifikasi usaha dengan menjajaki<br>
                   usaha dibidang support logistik bagi kegiatan coal<br>
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 p-0">
+        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-6 order-5">
           <img class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
         </div>
       </div>
@@ -200,16 +200,16 @@
             Our Subsidiaries
           </h3>
         </div>
-        <div class="col-lg-2 offset-lg-2 mt-lg-5">
+        <div class="col-lg-2 col-6 p-lg-0 p-5 offset-lg-2 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-05.png" alt="">
         </div>
-        <div class="col-lg-2 mt-lg-5">
+        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-06.png" alt="">
         </div>
-        <div class="col-lg-2 mt-lg-5">
+        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-07.png" alt="">
         </div>
-        <div class="col-lg-2 mt-lg-5">
+        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-08.png" alt="">
         </div>
       </div>
@@ -217,16 +217,20 @@
     <div class="container-fluid footer-content">
       <div class="row text-center">
           <div class="col-lg-12">
-              <h4 class="text-dark-blue pb-lg-4">
+              <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
                 Masih ada pertanyaan?
+              </h4>
+              <h4 class="text-dark-blue pb-5 d-lg-none">
+                Masih ada<br>
+                pertanyaan?
               </h4>
           </div>
       </div>
       <div class="row">
           <div class="container">
-              <div class="row text-center">
-                  <div class="col-lg-12">
-                    <a href="contact.html" class="link-orange-border mx-lg-4">
+              <div class="row text-center mb-lg-0 mb-5">
+                  <div class="col-lg-12 pb-lg-0 pb-5">
+                    <a href="contact.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
                       <span class="text-orange">
                         HUBUNGI KAMI
                       </span> 
@@ -236,27 +240,27 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-lg-5">
+  <div class="container-fluid footer-details mb-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
               Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
               Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              KuninganJakarta 12950
+              Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
              <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
           </a>
-          <p class="text-gray mt-lg-3">
+          <p class="text-gray mt-lg-3 mt-2 fax-details">
               Fax (0541) 261 532
           </p>
       </div>
-      <div class="col-lg-2 pl-lg-0 offset-lg-1">
+      <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
           <a href="#" class="text-gray d-block">
               <i class="fab fa-facebook-square"></i> Ansaf Indonesia
           </a>
@@ -268,16 +272,16 @@
           </a>
       </div>
   </div>
-  </div>
-  <div class="container-fluid footer bg-dark-blue">
-      <div class="row">
-          <div class="col-lg-12">
-              <p class="text-white mt-lg-3 text-center">
-                  Copyright © 2020 PT Ansaf Inti Resources
-              </p>
-          </div>
-      </div>
-  </div>
+</div>
+<div class="container-fluid footer bg-dark-blue">
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-white mt-3 text-center">
+                Copyright © 2020 PT Ansaf Inti Resources
+            </p>
+        </div>
+    </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
